# wisebot

./: .cvsignore  Doxyfile  LICENSE  MSVC.dsw  Make.defs.in  Makefile.am  README.md  acinclude.m4  buildconf  configure.ac  make-dist  maketags  showps.sh  softbot
client/: .cvsignore  Makefile.am  Makefile.ut_stest  api_lib.c  api_lib.h  api_sr.c  api_sr.h  benchmark.c  benchmark.h  client.c  client.h  commands.c  commands.h  lb_std.c  lb_std.h  lb_tcp.c  lb_tcp.h  softbot4.h  static_modules.c  test  testcd  testcd2  ut_stest.c  ut_stest.h
common/: .cvsignore  Makefile.am  check_string.c  common_core.c  common_util.c  config.c  gen_hanja  hangul.c  hanja.c  hash.c  hook.c  ipc.c  log_error.c  md5c.c  memfile.c  memory.c  modules.c  mprintf.c  msg_record.c  msort.c  qsort.c  qsort2.c  registry.c  scoreboard.c  setproctitle.c  shm.c  test_hanja.txt  util.c
debug/: Makefile.am  cygwin_fork.c  sb_fopen.c  sb_tstat.c
include/: .cvsignore  Makefile.am  ansi_color.h  auto_defines.h.in  common_core.h  common_util.h  config.h  constants.h  dataType.h  errorCode.h  hangul.h  hanja.h  hash.h  hook.h  ipc.h  log_error.h  md5.h  md5_global.h  memfile.h  memory.h  message.h  modules.h  mp_api.h  msg_record.h  pcreposix.h  registry.h  scoreboard.h  setproctitle.h  shm.h  softbot.h  standalone_debug.h  stopwatch.h  timelog.h  timestamp.h.in  util.h  version.h  win32_config.h
include/daum_koma/: HANL_error.h  Makefile  Makefile.am  Makefile.in  aboutIndexing.h  ac_config.h  ac_config.h.in  ac_config.h.in~  affile.h  auto_config.h  auto_config.h.in  codelib.h  color.h  config.h  convert.h  dema.h  dha.h  dha_win32.h  dhawin32.h  dicsearch.h  dict_cache.h  ds_option.h  errorlog.h  freqdic.h  grammar.h  hancode.h  hanja.h  hantable.h  hantype.h  hash.h  manage_dict.h  moran.h  moran_grammar.h  moran_tagdef.h  postproc.h  predicNaliasdic.h  query_token.h  replace_predictionary.h  spacing_words_file.h  stamp-h1  (+6 more)
modules/: Makefile.am  install-libexec.mk  install-pkglib.mk
modules/mod_api/: Makefile.am  cdm.c  cdm.h  cdm2.c  cdm2.h  charconv.c  charconv.h  did.c  did.h  did_client.c  did_client.h  did_daemon.c  did_daemon.h  docabstract.h  docapi.c  docapi.h  docattr.c  docattr.h  docattr2.c  docattr2.h  hash.c  hash.h  http_client.c  http_client.h  httpd.c  httpd.h  index_word_extractor.c  index_word_extractor.h  indexdb.c  indexdb.h  indexer.c  indexer.h  lexicon.c  lexicon.h  mod_api.c  mod_api.h  morpheme.c  morpheme.h  protocol4.c  protocol4.h  (+22 more)
modules/mod_cdm/: Makefile.am  cannedDocServer.h  indexHandle.c  mod_cdm.c  mod_cdm.h  mod_cdm2.c  mod_cdm2.h  mod_cdm2_docattr.c  mod_cdm2_docattr.h  mod_cdm2_file.c  mod_cdm2_file.h  mod_cdm2_lock.h  mod_cdm2_util.c  mod_cdm2_util.h  mod_cdm3.c  mod_cdm3.h  parseDoc.c
modules/mod_did/: Makefile.am  mod_did.c  mod_did.h  mod_did2.c  mod_did_client.c  mod_did_client.h  mod_did_daemon.c  mod_did_daemon.h  mod_did_message.h  mod_did_wrap_client.c  mod_did_wrap_daemon.c
modules/mod_docapi/: Makefile.am  mod_docapi.h  mod_docapi_cdmi.c  mod_docapi_expat.c  mod_docapi_expat_local_temp.c  mod_docapi_expat_temp.c  mod_docapi_libxml.c  testdocapicdmi.c
modules/mod_docattr/: Makefile.am  ext_skel  mod_docattr.c  mod_docattr.h  mod_docattr2.c  mod_docattr_new.c  mod_docattr_type1.c  mod_docattr_type1.h  mod_docattr_type2.c  mod_docattr_type2.h  mod_docattr_type3.c  mod_docattr_type3.h
modules/mod_frm/: Makefile.am  frm.h  mod_frm.c  mod_frm.h
modules/mod_hash/: Makefile.am  mod_bdb_hash.c
modules/mod_http_client/: Makefile.am  getdate.c  getdate.h  http.c  http.h  http_buffering.c  http_buffering.h  http_client_status.h  http_reserved_words.h  memfile.c  memfile.h  mod_http_client.c  mod_http_client.h  mprintf.c  parsedate.c  parsedate.h  test_http_client.c
modules/mod_httpd/: .cvsignore  Makefile.am  STATUS  check_undefined_symbol  check_undefined_symbol.txt  conf.h  config.c  connection.c  connection.h  core.c  core.h  filter.c  filter.h  gen_test_char.c  http_config.c  http_config.h  http_core.c  http_core.h  http_filter.c  http_filter.h  http_protocol.c  http_protocol.h  http_request.c  http_request.h  http_util.c  http_util.h  listen.c  listen.h  log.c  log.h  mod_httpd.c  mod_httpd.h  mod_httpd_test_handler.c  mod_httpd_test_handler.h  protocol.c  protocol.h  request.c  request.h  test_char.h  test_main.c  (+8 more)
modules/mod_httpd_handler/: Makefile.am  common_sbhandler.c  document_sbhandler.c  handler_util.c  handler_util.h  index_sbhandler.c  mod_agent_handler.c  mod_agent_sbhandler.c  mod_search_sbhandler.c  mod_standard_handler.c  mod_standard_handler.h  replication_sbhandler.c
modules/mod_ifs/: .cvsignore  Makefile.am  clean.sh  mod_ifs.c  mod_ifs.h  mod_ifs_defrag.c  mod_ifs_defrag.h  mod_ifs_test.c  table.c  table.h  test.c  test.h  test2.c
modules/mod_index_word_extractor/: .cvsignore  Makefile.am  koma_test.c  mod_bigram.c  mod_bigram.h  mod_bigram_truncation_search_support.c  mod_bigram_truncation_search_support.h  mod_daum_exact.c  mod_daum_koma.c  mod_dummy_ma.c  mod_http_rmac.c  mod_koma.c  mod_koma.h  mod_koma_complex_noun_support.c  mod_koma_complex_noun_support.h  mod_kor2chn_translator.c  mod_pkoma.c  mod_pkoma.h  mod_rmac.c  mod_rmac2.c  mod_rmas.c  mod_utf8.c  test_mod_koma.c  test_mod_koma_complex_noun.c  test_mod_pkoma.c  utf8_analyzer.c  utf8_analyzer.h
modules/mod_indexer/: Makefile.am  hit.h  mod_daemon_indexer.c  mod_daemon_indexer.h  mod_daemon_indexer2.c  mod_index_check.c  mod_index_doc.c  mod_index_doc.h  mod_index_doc_cdmi.c  mod_index_each_doc.c  mod_index_each_doc.h  mod_index_each_spooled_doc.c  mod_index_each_spooled_doc.h  mod_indexer.c  mod_indexer.h  mod_indexer_cdmi.c  mod_indexer_test.c  mod_indexer_test.h  mod_pile_doc.c  mod_pile_doc.h  mod_spooled_indexer.c  mod_spooled_indexer.h
server/: .cvsignore  Makefile.am  config.c  debug  hook.c  ipc.c  libsoftbot.dsp  log_error.c  memory.c  message.c  modules.c  mp_api.c  registry.c  relative_compilation.txt  scoreboard.c  server.c  server.h  shm.c  softbot.c  static_modules.c  util.c
util/: .cvsignore  Makefile.am  ifs_defrag.c  sort_test.c
(+584 files in other folders)
