# $Id$
include $(top_builddir)/Make.defs

MAINTAINERCLEANFILES = Makefile Makefile.in

bin_PROGRAMS = softbotcli

softbotcli_SOURCES = exports.c export_vars.h \
                     commands.h commands.c \
                     benchmark.c benchmark.h \
                     client.h client.c \
                     static_modules.c 

softbotcli_LDFLAGS = $(SOFTBOTCLI_LDFLAGS) $(DYN_LIB) $(THREAD_LIB) \
                     -lreadline -lncurses -export-dynamic 

softbotcli_CFLAGS  = -I../platform/generic/ \
                     -I../modules/mod_mp/ \
                     -I../modules/mod_api/ \
                     -I../platform/$(OS_TYPE)/

### 기본적인 library가 뒤에 와야 함.
### 즉 가장 많이 dependent한 libplatform.la가 제일 뒤로..
softbotcli_LDADD = -L../lib \
                ../modules/mod_api/libapi.la \
                ../server/libsoftbotserver.la \
                ../modules/mod_mp/libmp.la \
                ../platform/$(OS_TYPE)/libplatform.la

softbotcli_DEPENDENCIES = delete-exports exports.c export_vars.h softbotcli.exp


EXPORT_INCLUDES = -I$(top_builddir)/include -I$(top_builddir)/platform/ \
          -I$(top_builddir)/platform/$(OS_TYPE)/ -I$(top_builddir)/platform/generic/ \
          -I$(top_builddir)/modules/mod_mp/ \
          -I$(top_builddir)/modules/mod_api/ \
          -I$(top_builddir)/server/ -I$(top_builddir)/client/

EXPORT_FILES = ../platform/generic/*.h ../platform/$(OS_TYPE)/*.h \
               ../include/*.h \
               ../modules/mod_mp/*.h \
               ../modules/mod_api/lexicon.h \
               ../modules/mod_api/cdm.h \
               ../modules/mod_api/did.h \
               ../modules/mod_api/vbm.h \
               ../modules/mod_api/tcp.h \
               ../modules/mod_api/udp.h \
               ../modules/mod_api/qpp.h \
               ../modules/mod_api/qp.h \
               ../modules/mod_api/vrfi.h \
               ../modules/mod_api/indexer.h \
               ../modules/mod_api/docapi.h \
               ../modules/mod_api/protocol4.h \
               ../modules/mod_api/tokenizer.h \
               ../modules/mod_api/morpheme.h \
               ../modules/mod_api/xmlparser.h \
               ../modules/mod_api/rmas.h \
               ../modules/mod_api/docattr.h \
               ../modules/mod_api/index_word_extractor.h
               

if AIX5
DISTCLEANFILES = softbotcli.exp
all-local: delete-exports softbotcli.exp
clean-local: delete-exports
else
DISTCLEANFILES = 
all-local: delete-exports
clean-local: delete-exports
endif


exports.c:
	@echo $(AWK) -f $(top_builddir)/scripts/make_exports.awk $(EXPORT_FILES) > $@ 
	$(AWK) -f $(top_builddir)/scripts/make_exports.awk $(EXPORT_FILES) > $@

export_vars.h:
	@echo $(AWK) -f $(top_builddir)/scripts/make_var_export.awk $(EXPORT_FILES) > $@
	$(AWK) -f $(top_builddir)/scripts/make_var_export.awk $(EXPORT_FILES) > $@

softbotcli.exp: exports.c export_vars.h
	@echo Generating softbotcli.exp from exports.c and export_vars.h...
	@echo "#! softbotcli " > $@
	@echo "* This file was AUTOGENERATED at build time." >> $@
	@echo "* Please do not edit by hand." >> $@
	$(CPP) $(CPPFLAGS) $(INCLUDES) $(EXPORT_INCLUDES) exports.c | grep "sb_hack_" | sed -e 's/^.*[)]\(.*\);$$/\1/' >> $@
	$(CPP) $(CPPFLAGS) $(INCLUDES) $(EXPORT_INCLUDES) export_vars.h | sed -e 's/^\#[^!]*//' | sed -e '/^$$/d' >> $@

delete-exports:
	@if test -f exports.c; then \
	        headers="`find $(EXPORT_FILES) -newer exports.c`" ; \
	        if test -n "$$headers"; then \
	            echo Found newer headers. Will rebuild exports.c. ; \
	            echo rm -f exports.c ; \
	            rm -f exports.c ; \
	        fi \
	fi
	@if test -f export_vars.h; then \
	        headers="`find $(EXPORT_FILES) -newer export_vars.h`" ; \
	        if test -n "$$headers"; then \
	            echo Found newer headers. Will rebuild export_vars.h. ; \
	            echo rm -f export_vars.h ; \
	            rm -f export_vars.h ; \
	        fi \
	fi

