# $Id$
include $(top_builddir)/Make.defs

MAINTAINERCLEANFILES = Makefile Makefile.in

dist_pkgdata_DATA = auto_config.h.in
include_HEADERS = config.h constants.h hook.h ipc.h log_error.h modules.h \
                  registry.h softbot.h util.h memory.h \
                  common_core.h common_util.h
# Deprecated headers
# pcreposix.h

