# $Id$ 
## 적혀 있는 순서대로 들어가서 make가 됨.

SUBDIRS = mod_api \
	mod_mp \
	mod_tcp mod_udp \
	mod_vbm \
	mod_cdm \
	mod_docattr \
	mod_docapi \
	mod_lexicon \
	mod_did \
	mod_morpheme mod_qpp \
	mod_indexer mod_qp \
	mod_protocol4 mod_softbot4 \
	mod_xmlparser \
	mod_tokenizer \
	mod_index_word_extractor \
	mod_vrm \
	mod_frm \
	mod_site \
	mod_site_general \
	mod_sfs mod_ifs \
	mod_httpd \
	mod_httpd_handler \
	mod_http_client \
    #
#	mod_hash
#
#	mod_vrfi\
#	mod_spool \
#	mod_vrf \
#	mod_oldlexicon \
#	mod_document_database \
#	mod_cdmi \
#	mod_filter \
#	mod_cdmi \
#	mod_crawler
#	mod_sbcdm_tcp \
#	mod_cdmclt \
#
#	mod_charconv \
#

MAINTAINERCLEANFILES = Makefile Makefile.in
